--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,5 +9,5 @@ metadata:
   #   backstage.io/techdocs-ref: dir:.
 spec:
   type: website
-  owner: john@example.com
+  owner: group:default/fa22-bcs-183
   lifecycle: experimental
