--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ e2e-test-report/
 
 # Python virtualenv (local dev)
 .venv/
+
+# Local standalone IDP repo clone (kept separate from this repo)
+IDP/
